--- a/client/src/scss/main.scss
+++ b/client/src/scss/main.scss
@@ -1,4 +1,5 @@
 @import "partials/utilities/variables", "partials/utilities/mixins",
     "partials/base/normalize", "partials/base/elements",
     "partials/base/typography", "partials/base/fonts", "partials/pages/body",
-    "partials/layouts/loading", "partials/layouts/categoryContainer";
+    "partials/layouts/loading", "partials/layouts/error",
+    "partials/layouts/categoryContainer";
